<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragment.subfragment.CropInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/backButtonCropInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/Back_Button"
                android:background="@drawable/angulo_izquierdo_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Title"
                android:text="Información de cultivo"
                android:textAlignment="center"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="20dp"
            android:layout_gravity="bottom">
            
            <ImageView
                android:id="@+id/cropInfoImage"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="CropInfoImage"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/cropName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            style="@style/TextAppearance.Title"
            android:layout_marginStart="@dimen/text_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cropDescriptionPlaceholder"
            style="@style/TextAppearance.SubTitle"
            android:layout_marginStart="@dimen/text_margin"
            />

        <TextView
            android:id="@+id/cropDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Body"
            android:layout_marginStart="@dimen/text_margin"
            android:text="@string/large_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiempo_de_cosecha_placeholder"
            android:layout_marginStart="@dimen/text_margin"
            style="@style/TextAppearance.SubTitle"/>

        <TextView
            android:id="@+id/cropHarvestTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Body"
            android:layout_marginStart="@dimen/text_margin"
            android:text="@string/placeholder"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_de_cultivo_placeholder"
            style="@style/TextAppearance.SubTitle"
            android:layout_marginStart="@dimen/text_margin"
            />

        <TextView
            android:id="@+id/cropType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            style="@style/TextAppearance.Body"
            android:layout_marginStart="@dimen/text_margin"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>