<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragment.subfragment.home.FertilizerInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">
            
            <ImageView
                android:id="@+id/fertilizeImageInfo"
                android:layout_width="match_parent"
                android:layout_height="244dp"
                android:contentDescription="@string/fertilizer_image_content_description"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/fertilizerNameInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Title"
            android:text="@string/placeholder"
            android:layout_marginStart="@dimen/text_margin"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Title"
            android:text="@string/descripci_nTxt"
            android:layout_marginStart="@dimen/text_margin"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <TextView
            android:id="@+id/fertilizerDescriptionTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Body"
            android:text="@string/placeholder"
            android:layout_marginStart="@dimen/text_margin"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Title"
            android:text="@string/fertilizerInfoTypeText"
            android:layout_marginStart="@dimen/text_margin"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <TextView
            android:id="@+id/fertilizerTypeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Body"
            android:text="@string/placeholder"
            android:layout_marginStart="@dimen/text_margin"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Title"
            android:text="@string/fertilizerInfoProviderText"
            android:layout_marginStart="@dimen/text_margin"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <TextView
            android:id="@+id/fertilizerProviderTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Body"
            android:text="@string/placeholder"
            android:layout_marginStart="@dimen/text_margin"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Title"
            android:text="@string/fertilizerInfoAMethodText"
            android:layout_marginStart="@dimen/text_margin"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <TextView
            android:id="@+id/fertilizerAMethodTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Body"
            android:text="@string/placeholder"
            android:layout_marginStart="@dimen/text_margin"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Title"
            android:text="@string/fertilizerInfoRDoseText"
            android:layout_marginStart="@dimen/text_margin"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <TextView
            android:id="@+id/fertilizerRDoseTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Body"
            android:text="@string/placeholder"
            android:layout_marginStart="@dimen/text_margin"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>