<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragment.DetectionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/detectionGuide30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.30"
            android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/detectionGuide90"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/detectionGuide30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detection_fragment_title"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="10dp"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                app:cardBackgroundColor="@color/apple_green"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/diagnosis_card"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/cropImageView"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:contentDescription="Crop Image" />

                        <ImageView
                            android:id="@+id/deficiencyImageView"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:contentDescription="Deficiency Image" />

                        <TextView
                            android:id="@+id/textDiagnosisCard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/DiagnosisCard"
                            android:textAlignment="textEnd"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textDateDiagnosis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Date"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textDiagnosis"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="example"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/detectionGuide90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detectionGuide30">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historialString"
                android:layout_marginHorizontal="5dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDetectionList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/adddetection"
            android:focusable="true"
            android:src="@drawable/camara_24"
            app:backgroundTint="@color/mid_orange"
            app:fabSize="normal"
            app:layout_constraintBottom_toTopOf="@+id/detectionGuide90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:maxImageSize="35dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>